<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RC Car Server</string>
    <string name="wifi_ssid">Wi-Fi Connection:</string>
    <string name="ip_address">IP Address:</string>
    <string name="waiting">Waiting for Connection ...</string>
    <string name="start_btn">START LISTENING</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
