<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ServerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_ssid"
        android:id="@+id/SSIDTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SSIDTextView"
        android:text="@string/ip_address"
        android:id="@+id/ipTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/waiting"
        android:id="@+id/waitingTextView"
        android:layout_below="@+id/ipTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/cancel_btn"
        android:id="@+id/startBtn"
        style="@style/btn_style"
        android:layout_marginTop="30dp"
        android:onClick="cancelListening"
        android:layout_below="@+id/waitingTextView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
